--- a/Inutivent-iOS/es.lproj/Main.strings
+++ b/Inutivent-iOS/es.lproj/Main.strings
@@ -1,6 +1,6 @@
 
-/* Class = "IBUILabel"; text = "www.inutilis.com"; ObjectID = "0dD-33-rO5"; */
-"0dD-33-rO5.text" = "www.inutilis.com";
+/* Class = "IBUILabel"; text = "www.example.com"; ObjectID = "0dD-33-rO5"; */
+"0dD-33-rO5.text" = "www.example.com";
 
 /* Class = "IBUILabel"; text = "Event Title"; ObjectID = "1R9-1P-obq"; */
 "1R9-1P-obq.text" = "Título del evento";
@@ -14,8 +14,8 @@
 /* Class = "IBUILabel"; text = "Version History"; ObjectID = "2xa-0q-507"; */
 "2xa-0q-507.text" = "Historia de versiones";
 
-/* Class = "IBUILabel"; text = "support@inutilis.com"; ObjectID = "32H-FS-u1e"; */
-"32H-FS-u1e.text" = "support@inutilis.com";
+/* Class = "IBUILabel"; text = "example@example.com"; ObjectID = "32H-FS-u1e"; */
+"32H-FS-u1e.text" = "example@example.com";
 
 /* Class = "IBUILabel"; text = "0.0"; ObjectID = "3gh-Mn-JgG"; */
 "3gh-Mn-JgG.text" = "0.0";
