localized iPad version. optimized cover photo loading.

--- a/Inutivent-iOS/es.lproj/Main.strings
+++ b/Inutivent-iOS/es.lproj/Main.strings
@@ -78,7 +78,7 @@
 "ZCi-cA-v5c.title" = "Historia de versiones";
 
 /* Class = "IBUILabel"; text = "Send Mail to Developer"; ObjectID = "dfb-Gs-UZR"; */
-"dfb-Gs-UZR.text" = "Enviar mail a desarrollador";
+"dfb-Gs-UZR.text" = "Enviar mail al desarrollador";
 
 /* Class = "IBUILabel"; text = "Maybe Going"; ObjectID = "fPo-v6-FnW"; */
 "fPo-v6-FnW.text" = "Tal vez asista";
