--- a/Inutivent-iOS/es.lproj/Main-iPad.strings
+++ b/Inutivent-iOS/es.lproj/Main-iPad.strings
@@ -5,23 +5,11 @@
 /* Class = "IBUILabel"; text = "Version History"; ObjectID = "659-L8-PcR"; */
 "659-L8-PcR.text" = "Historia de versiones";
 
-/* Class = "IBUILabel"; text = "0.0"; ObjectID = "8I7-X9-JZc"; */
-"8I7-X9-JZc.text" = "0.0";
-
 /* Class = "IBUILabel"; text = "Going"; ObjectID = "D8D-bw-QV6"; */
 "D8D-bw-QV6.text" = "Asistiré";
 
 /* Class = "IBUINavigationItem"; title = "Gromf"; ObjectID = "DqR-lg-4rt"; */
 "DqR-lg-4rt.title" = "Gromf";
-
-/* Class = "IBUITextView"; text = "Lorem ipsum"; ObjectID = "HJV-Sq-hGR"; */
-"HJV-Sq-hGR.text" = "Lorem ipsum";
-
-/* Class = "IBUILabel"; text = "Detail"; ObjectID = "I9m-pi-O4l"; */
-"I9m-pi-O4l.text" = "Detail";
-
-/* Class = "IBUILabel"; text = "Title"; ObjectID = "J6d-QM-sew"; */
-"J6d-QM-sew.text" = "Title";
 
 /* Class = "IBUILabel"; text = "Host"; ObjectID = "K3g-4H-Jrs"; */
 "K3g-4H-Jrs.text" = "Host";
@@ -38,8 +26,8 @@
 /* Class = "IBUITableViewSection"; footerTitle = "Copyright 2014 by Timo Kloss\nInutilis Software"; ObjectID = "P6Q-7m-x7D"; */
 "P6Q-7m-x7D.footerTitle" = "Copyright 2014 by Timo Kloss\nInutilis Software";
 
-/* Class = "IBUILabel"; text = "www.example.com"; ObjectID = "PSF-c9-rLh"; */
-"PSF-c9-rLh.text" = "www.example.com";
+/* Class = "IBUILabel"; text = "More Information"; ObjectID = "Qjm-ES-aBt"; */
+"Qjm-ES-aBt.text" = "Más información";
 
 /* Class = "IBUILabel"; text = "Event Title"; ObjectID = "QvY-dw-ZO3"; */
 "QvY-dw-ZO3.text" = "Título del evento";
@@ -62,35 +50,20 @@
 /* Class = "IBUINavigationItem"; title = "About"; ObjectID = "f2e-HZ-7Ws"; */
 "f2e-HZ-7Ws.title" = "Acerca";
 
-/* Class = "IBUILabel"; text = "example@example.com"; ObjectID = "ha1-lJ-ZXC"; */
-"ha1-lJ-ZXC.text" = "example@example.com";
-
 /* Class = "IBUINavigationItem"; title = "Version History"; ObjectID = "hc6-mY-g9Z"; */
 "hc6-mY-g9Z.title" = "Historia de versiones";
 
-/* Class = "IBUIButton"; normalTitle = "Button"; ObjectID = "k9C-Vy-s4P"; */
-"k9C-Vy-s4P.normalTitle" = "Button";
-
 /* Class = "IBUIButton"; normalTitle = "Post"; ObjectID = "oMm-Mp-ZSu"; */
 "oMm-Mp-ZSu.normalTitle" = "Enviar";
-
-/* Class = "IBUILabel"; text = "Title"; ObjectID = "oZi-57-Fqu"; */
-"oZi-57-Fqu.text" = "Title";
 
 /* Class = "IBUILabel"; text = "Send Mail to Developer"; ObjectID = "qZT-UK-hY2"; */
 "qZT-UK-hY2.text" = "Enviar mail al desarrollador";
 
 /* Class = "IBUILabel"; text = "Date"; ObjectID = "sLk-LJ-4CA"; */
-"sLk-LJ-4CA.text" = "Date";
+"sLk-LJ-4CA.text" = "Fecha";
 
 /* Class = "IBUILabel"; text = "Maybe Going"; ObjectID = "vCR-rf-WdP"; */
 "vCR-rf-WdP.text" = "Tal vez asista";
 
 /* Class = "IBUILabel"; text = "Time"; ObjectID = "wQB-bp-efZ"; */
-"wQB-bp-efZ.text" = "Time";
-
-/* Class = "IBUILabel"; text = "Label"; ObjectID = "wzP-cv-GGX"; */
-"wzP-cv-GGX.text" = "Label";
-
-/* Class = "IBUILabel"; text = "Title"; ObjectID = "zvj-gz-vid"; */
-"zvj-gz-vid.text" = "Title";
+"wQB-bp-efZ.text" = "Hora";
