localization corrections. updated introduction screens.

--- a/Inutivent-iOS/de.lproj/Main.strings
+++ b/Inutivent-iOS/de.lproj/Main.strings
@@ -51,7 +51,7 @@
 "ZCi-cA-v5c.title" = "Versionsgeschichte";
 
 /* Class = "IBUILabel"; text = "Send Mail to Developer"; ObjectID = "dfb-Gs-UZR"; */
-"dfb-Gs-UZR.text" = "Sende Mail an Entwickler";
+"dfb-Gs-UZR.text" = "Sende E-Mail an Entwickler";
 
 /* Class = "IBUILabel"; text = "Maybe Going"; ObjectID = "fPo-v6-FnW"; */
 "fPo-v6-FnW.text" = "Vielleicht";
