--- a/Inutivent-iOS/es.lproj/Main.strings
+++ b/Inutivent-iOS/es.lproj/Main.strings
@@ -24,7 +24,7 @@
 "D2h-91-brL.title" = "Eventos";
 
 /* Class = "IBUILabel"; text = "Edit or Invite"; ObjectID = "EAL-0m-MQU"; */
-"EAL-0m-MQU.text" = "Editar o invitar";
+"EAL-0m-MQU.text" = "Editar";
 
 /* Class = "IBUILabel"; text = "Version"; ObjectID = "G3n-up-Tt8"; */
 "G3n-up-Tt8.text" = "Versión";
